<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- CABECERO -->
    <include layout="@layout/header"/>

    <!-- Contenedor Principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de"
            android:backgroundTint="@color/primary"
            android:textColor="@color/button_text"
            android:padding="12dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnCambiarTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_tema"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/button_text"
            android:padding="12dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnEditarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_usuario"
            android:backgroundTint="@color/primary_variant"
            android:textColor="@color/button_text"
            android:padding="12dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            android:backgroundTint="@color/error"
            android:textColor="@color/button_text"
            android:padding="12dp"/>
    </LinearLayout>

    <!-- FOOTER -->
    <include layout="@layout/footer"/>
</LinearLayout>
